Uppercase mat-buttons text, fix loading spinner jumping bug.

--- a/src/sass/_materialdesign.scss
+++ b/src/sass/_materialdesign.scss
@@ -56,3 +56,7 @@ sf-filter-channels-dialog {
   }
 
 }
+
+button[mat-button] {
+  text-transform: uppercase;
+}
